--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -21,14 +21,9 @@ ALWAYS do everything in the optimizations / bugs / tests / ux / qa / other secti
 
 Youtube channels on the resources page, that MAY BE DYING (keep an eye on them): Crypto Trader, Crypto Bobby, and IMineBlocks.
 
-Keep an eye on the usleep time in pairing_market_value() right before fallback looping. If it's not enough to stop endless loops freezing the system (by giving global vars time to update before looping), then up it in 0.05 second increments.
-
 ///////////////////////////////////////////////////////
 OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
-
-
-Timestamp AFTER the v4.08.11 release, we now have some serious crypto folio tech to maintain proof as gplv3 here.
 
 
 Retest password strength function after the modification.
@@ -223,6 +218,9 @@ Simple trading bot, to run from cron / cli (with SQL-based admin authentication 
 ///////////////////////////////////////////////////////
 MAYBE SECTION
 ///////////////////////////////////////////////////////
+
+
+Should GRIN mining difficulty be different for each cuckoo level in the mining calculator?
 
 
 Consider adding an optional parameter for the pairing value function, to force using a specific exchange (if it exists for that market), to possibly use in charts / alerts if the asset is also a crypto-to-crypto pairing?
