Speed optimizations, UX , ajax logic base structure
Speed optimizations, UX , ajax logic base structure

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -220,6 +220,9 @@ MAYBE SECTION
 ///////////////////////////////////////////////////////
 
 
+Save trading notes via the new ajax-js.php logic (rather than reload the entire app)?
+
+
 Should GRIN mining difficulty be different for each cuckoo level in the mining calculator?
 
 
