--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -220,6 +220,9 @@ MAYBE SECTION
 ///////////////////////////////////////////////////////
 
 
+Convert all long hand javascript to jquery?
+
+
 Save trading notes via the new ajax-js.php logic (rather than reload the entire app)?
 
 
