Price alert reset UX / TODO revisions
Price alert reset UX / TODO revisions

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -220,6 +220,9 @@ MAYBE SECTION
 ///////////////////////////////////////////////////////
 
 
+Admin import / export of settings (consider security implications)?
+
+
 Convert all long hand javascript to jquery?
 
 
