Code optimization, and price alert fixed reset config semantics / UX
Code optimization, and price alert fixed reset config semantics / UX

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3087,7 +3087,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Misc. minor bug fixes / UX / optimization revisions
 
--Semantics (naming) change for 'price_alerts_refresh' config setting, over to 'price_alerts_reset'
+-Semantics (naming) change for 'price_alerts_refresh' config setting, over to 'price_alerts_fixed_reset'
 
 -Dead exchange removal (bitlish)
 
