--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -26,10 +26,16 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
-Review new app config categorization semantics, to see if any variable naming can be shorter for readability.
+Epiphany browser trying to autoplay audio alert: [Error] Unhandled Promise Rejection: NotSupportedError: The operation is not supported.
 
 
-Test login / register / reset with light theme.
+Have random tip display a "next tip" link...consider putting it at top of charts page too.
+
+
+New screenshots.
+
+
+1D / 1W / 1M .... chart links are broken on chrome for Android (BUT work fine on Chrome for Ubuntu). 
 
 
 Test in all major browsers (MSIE rendering seems borked in latest version, find out why).
