--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3093,11 +3093,15 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 IMPORTANT UPGRADE NOTES: 
 
-v4.06.0 / v4.07.7 / v4.10.0 HAVE MAJOR OVERHAULS TO CONFIGURATION VARIABLE NAMES (FOR MODULARITY, SEMANTICS, AND EASY-TO-UNDERSTAND NAMES). MIGRATE ANY PRE-EXISTING CUSTOM CONFIG SETTINGS TO THE #NEW# VARIABLE NAMES
-
 v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USED" SYSTEM STATS (WHICH #NOW# CORRECTLY DOES NOT INCLUDE MEMORY BUFFERS / CACHE). SYSTEM STATS CHARTS AFTER UPGRADE TO v4.09.0 OR HIGHER WILL STILL RETAIN OLD SYSTEM STATS DATA FOR MEMORY USAGE, BUT WILL BE LABELED DIFFERENTLY ("USED MEMORY" INSTEAD OF "FREE MEMORY"). JUST IGNORE THE OLDER MEMORY DATA, OR RESET YOUR SYSTEM STATS CHARTS BY DELETING: /cache/charts/system/
 
+v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EASY-TO-UNDERSTAND NAMES), MIGRATE YOUR CUSTOM CONFIG SETTINGS TO THE #NEW# VARIABLE NAMES
+
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
+
+v4.06.0 and higher modularizes the configuration settings into the new $app_config array. ALL
+CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
+AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 v4.04.3 and higher of this app RESETS PRICE ALERT VOLUME STORED TO USE PAIRING VOLUME INSTEAD 
 OF ASSET VOLUME, SO !FIRST! PRICE ALERTS AFTER UPGRADING WILL HAVE INCORRECT VOLUME CHANGE 
@@ -3121,13 +3125,15 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Configuration settings for CAPTCHA image login protection (in power user settings)
 
+-Improved small screen support (pinch / zoom now work again)
+
 -Misc. Optimizations / UX revisions
 
 IMPORTANT UPGRADE NOTES: 
 
-v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USED" SYSTEM STATS (WHICH #NOW# CORRECTLY DOES NOT INCLUDE MEMORY BUFFERS / CACHE). SYSTEM STATS CHARTS AFTER UPGRADE TO v4.09.0 OR HIGHER WILL STILL RETAIN OLD SYSTEM STATS DATA FOR MEMORY USAGE, BUT WILL BE LABELED DIFFERENTLY ("USED MEMORY" INSTEAD OF "FREE MEMORY"). JUST IGNORE THE OLDER MEMORY DATA, OR RESET YOUR SYSTEM STATS CHARTS BY DELETING: /cache/charts/system/
+v4.06.0 / v4.07.7 / v4.10.0 HAVE MAJOR OVERHAULS TO CONFIGURATION VARIABLE NAMES (FOR MODULARITY, SEMANTICS, AND EASY-TO-UNDERSTAND NAMES). MIGRATE ANY PRE-EXISTING CUSTOM CONFIGURATION TO THE #NEW# VARIABLE NAMES
 
-v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EASY-TO-UNDERSTAND NAMES), MIGRATE YOUR CUSTOM CONFIG SETTINGS TO THE #NEW# VARIABLE NAMES
+v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USED" SYSTEM STATS (WHICH #NOW# CORRECTLY DOES NOT INCLUDE MEMORY BUFFERS / CACHE). SYSTEM STATS CHARTS AFTER UPGRADE TO v4.09.0 OR HIGHER WILL STILL RETAIN OLD SYSTEM STATS DATA FOR MEMORY USAGE, BUT WILL BE LABELED DIFFERENTLY ("USED MEMORY" INSTEAD OF "FREE MEMORY"). JUST IGNORE THE OLDER MEMORY DATA, OR RESET YOUR SYSTEM STATS CHARTS BY DELETING: /cache/charts/system/
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
