--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -26,6 +26,9 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
+Document API usage in README.txt
+
+
 See if we can column sort by SELECTED exchange / market pairing (right now it sorts by first in the list?), by dynamically populating a hidden value AND running the sort filter through it instead.
 
 
